--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,12 +42,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add_24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/holo_blue_light"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext"
+        app:srcCompat="@drawable/ic_add_24dp"/>
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/edittext_add_input"
