--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,41 +1,41 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:paddingBottom="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:paddingBottom="@dimen/activity_horizontal_margin"
+                                             android:paddingLeft="@dimen/activity_horizontal_margin"
+                                             android:paddingRight="@dimen/activity_horizontal_margin"
+                                             android:paddingTop="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/spinner"
+        style="@style/AlertDialog.AppCompat.Light"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        style="@style/AlertDialog.AppCompat.Light"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/edittext"
-        android:layout_width="0dp"
-        app:layout_constraintVertical_weight="@android:integer/config_mediumAnimTime"
         style="@style/AlertDialog.AppCompat.Light"
-        android:maxLines="1"
-        android:ellipsize="end"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
         android:hint="@string/generic_input_field_hint"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
-        tools:ignore="MissingConstraints"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/spinner"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/spinner"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/spinner" />
+        app:layout_constraintTop_toTopOf="@+id/spinner"
+        app:layout_constraintVertical_weight="@android:integer/config_mediumAnimTime"
+        tools:ignore="MissingConstraints"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -52,22 +52,22 @@
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/edittext_add_input"
-        android:layout_width="wrap_content"
         style="@style/AlertDialog.AppCompat.Light"
-        android:ellipsize="end"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ellipsize="end"
         android:hint="@string/generic_input_adding"
-        android:maxLength="25"
         android:imeOptions="actionDone"
         android:inputType="text"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:maxLength="25"
         android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/layout_buttons"
@@ -108,8 +108,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/button_2"
