completing the keying form

--- a/app/src/main/res/layout/board_expenses_keying.xml
+++ b/app/src/main/res/layout/board_expenses_keying.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/space_normal">
+    android:layout_margin="@dimen/space_small"
+    android:paddingEnd="@dimen/space_normal"
+    android:paddingStart="@dimen/space_normal">
 
     <ruemouffetard.stewardboard.Widgets.BetterSpinner
         android:id="@+id/spinner_expenses_table_inputs"
@@ -24,14 +26,14 @@
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:hint="@string/keying_expense_input_hint"
-        android:imeOptions="actionNone"
-        android:inputType="number"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
         android:lines="1"
         android:maxWidth="200dp"
         app:layout_constraintEnd_toStartOf="@+id/spinner_expense_currency"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="@+id/spinner_expenses_table_inputs"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_expenses_table_inputs"
         tools:text="ZEOJEOEJEOJEJ"/>
 
@@ -53,14 +55,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="471dp"/>
+        app:layout_constraintGuide_end="@dimen/space_normal"/>
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/edittext_expense_miscellaneous"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
+        android:imeOptions="actionDone"
+        android:inputType="text"
         android:background="@android:drawable/editbox_background_normal"
         android:hint="@string/keying_expense_miscellaneous_hint"
         android:maxLength="50"
@@ -74,7 +78,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:checked="true"
+        android:lines="1"
         android:padding="@dimen/space_small"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/spinner_expenses_table_inputs"
@@ -88,7 +94,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/space_big"
         android:background="@drawable/bkgnd_flip_gray_blue"
         android:paddingEnd="@dimen/space_small"
         android:paddingStart="@dimen/space_small"
