--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,8 @@
 
     <ruemouffetard.stewardboard.Widgets.ExpensesKeyingLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_small"/>
 
-</LinearLayout>
+
+</FrameLayout>
