--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="space_normal">10dp</dimen>
     <dimen name="space_small">5dp</dimen>
+    <dimen name="space_big">20dp</dimen>
 </resources>
