--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <ruemouffetard.stewardboard.Widgets.ExpensesKeyingLayout
+        android:id="@+id/keying_board"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_small"/>
