--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,4 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:paddingBottom="@dimen/activity_horizontal_margin"
@@ -8,7 +6,14 @@
                                              android:paddingRight="@dimen/activity_horizontal_margin"
                                              android:paddingTop="@dimen/activity_vertical_margin">
 
-    <android.support.v7.widget.AppCompatSpinner
+
+    <ruemouffetard.stewardboard.Widgets.ExpensesKeyingLayout
+        android:id="@+id/keying_board"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_small"/>
+
+    <!--<android.support.v7.widget.AppCompatSpinner
         android:id="@+id/spinner"
         style="@style/AlertDialog.AppCompat.Light"
         android:layout_width="wrap_content"
@@ -128,6 +133,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 </android.support.constraint.ConstraintLayout>
