--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -58,13 +58,16 @@
         android:background="#000"
         app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>
 
+    <!-- TODO START TEST ENTERPRISE STATE -->
     <ImageView
         android:id="@+id/view_enterprise_state"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"
-        tools:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"/>
+
+        <!--TODO END TEST -->
 
     <View
         android:layout_width="match_parent"
@@ -83,6 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view_enterprise_state"/>
 
     <ProgressBar
+        android:id="@+id/progressbar_expense_details"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
