--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
+        android:background="@color/fourteen_gray"
         app:layout_constraintTop_toBottomOf="@+id/text_expense_header_title"/>
 
     <View
@@ -82,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@color/fourteen_gray"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/view_enterprise_state"/>
 
