--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="card_backgroud_white">#FFFFFF</color>
     <color name="nine_gray">#999</color>
-    <color name="fourteen">#eee</color>
+    <color name="fourteen_gray">#eee</color>
 </resources>
