--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -60,13 +60,12 @@
         app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>
 
     <!-- TODO START TEST ENTERPRISE STATE -->
-    <ImageView
+    <ruemouffetard.stewardboard.Widgets.WeighBalance
         android:id="@+id/view_enterprise_state"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"
-        android:src="@mipmap/ic_launcher"/>
+        app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>
 
         <!--TODO END TEST -->
 
