--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:background="@color/fourteen_gray"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/text_expense_header_title"/>
 
     <View
@@ -63,7 +64,7 @@
     <ruemouffetard.stewardboard.Widgets.WeighBalance
         android:id="@+id/view_enterprise_state"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>
 
