--- a/app/src/main/res/layout/fragment_expenses_details.xml
+++ b/app/src/main/res/layout/fragment_expenses_details.xml
@@ -69,8 +69,10 @@
         app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>-->
 
     <ruemouffetard.stewardboard.Widgets.NoteStackView
+        android:id="@+id/view_enterprise_state"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="400dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_expense_balance"/>
 
         <!--TODO END TEST -->
 
